kustomize/overlays/production/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  serviceAccountName: cms-service-account
  containers:
    - name: alpine
      image: alpine
      command: ["sh", "-c", "sleep 3600"]
