kustomize/overlays/production/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongodb
spec:
  clusterIP: None  # Headless service
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
